# OllamaDev-Qt

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md  install.sh
.build/AppDir/: AppRun
.build/AppDir/usr/lib/: libQt6Concurrent.so.6  libQt6EglFSDeviceIntegration.so.6  libQt6Svg.so.6  libQt6WaylandClient.so.6  libQt6WaylandEglClientHwIntegration.so.6  libcurl-gnutls.so.4  libinput.so.10  libts.so.0
.build/appimage/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
.build/appimage/.qt/: QtDeploySupport.cmake
.build/appimage/ade/: Makefile  cmake_install.cmake  ollamadev-ade
.build/appimage/ade/ollamadev-ade_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
.build/appimage/ade/ollamadev-ade_autogen/EWIEGA46WW/: moc_BoardPane.cpp  moc_BoardPane.cpp.d  moc_Canvas.cpp  moc_Canvas.cpp.d  moc_EditorPane.cpp  moc_EditorPane.cpp.d  moc_FilesPane.cpp  moc_FilesPane.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_Pane.cpp  moc_Pane.cpp.d  moc_TerminalWidget.cpp  moc_TerminalWidget.cpp.d
.build/appimage/cli/: Makefile  cmake_install.cmake  ollamadev
.build/appimage/cli/ollamadev_autogen/: deps
.build/appimage/core/: Makefile  cmake_install.cmake
.build/appimage/core/odv-core_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
.build/appimage/core/odv-core_autogen/EWIEGA46WW/: moc_Pty.cpp  moc_Pty.cpp.d  moc_Stt.cpp  moc_Stt.cpp.d
.build/appimage/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  odv-tests
.build/appimage/tests/odv-tests_autogen/: deps  moc_predefs.h
.github/workflows/: ci.yml
ade/: AgentTeamPane.cpp  AgentTeamPane.h  BoardPane.cpp  BoardPane.h  BrainPane.cpp  BrainPane.h  BrowserPane.cpp  BrowserPane.h  CMakeLists.txt  Canvas.cpp  Canvas.h  ChatPane.cpp  ChatPane.h  CodeSearchPane.cpp  CodeSearchPane.h  CoderPane.cpp  CoderPane.h  CommandPalette.cpp  CommandPalette.h  EditorPane.cpp  EditorPane.h  FilesPane.cpp  FilesPane.h  GitGraph.cpp  GitGraph.h  GitPane.cpp  GitPane.h  GraphPane.cpp  GraphPane.h  InlineCompleter.cpp  InlineCompleter.h  MainWindow.cpp  MainWindow.h  ManageDialogs.cpp  ManageDialogs.h  Minimap.cpp  Minimap.h  Pane.cpp  Pane.h  PaneHost.h  (+22 more)
cli/: CMakeLists.txt  Repl.cpp  Repl.h  main.cpp
core/: Acp.cpp  Acp.h  Agent.cpp  Agent.h  AgentDefs.cpp  AgentDefs.h  Backend.cpp  Backend.h  Board.cpp  Board.h  CMakeLists.txt  CliBackend.cpp  CliBackend.h  CodeIndex.cpp  CodeIndex.h  Config.cpp  Config.h  ContextTuner.cpp  ContextTuner.h  Crash.cpp  Crash.h  Crew.cpp  Crew.h  Eval.cpp  Eval.h  GitFlow.cpp  GitFlow.h  Hooks.cpp  Hooks.h  Json.cpp  Json.h  Lsp.cpp  Lsp.h  Mcp.cpp  Mcp.h  Memory.cpp  Memory.h  Models.cpp  Models.h  OllamaBackend.cpp  (+50 more)
deploy/vps/: Caddyfile  README.md  display-session.sh  ollamadev-desktop.service  ollamadev-display.service  ollamadev-novnc.service  ollamadev-vps.env  setup.sh  smoke-test.sh
docs/: CNAME  index.html
integrations/vscode/: README.md  extension.js  package.json
packaging/: ollamadev-ade.desktop
scripts/: build-appimage.sh  crew-benchmark-parallel.sh  crew-benchmark-publish.sh  crew-benchmark.sh  install.sh  release.sh
tests/: CMakeLists.txt  smoke.cpp
